fix: navbar side on mobile

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -43,20 +43,24 @@
 
         @media (max-width: $main-layout-breakpoint-xxm) {
           border: none;
-          border-top: .4rem solid transparent;
-          border-bottom: .4rem solid transparent;
+          border-top: .2rem solid transparent;
+          border-bottom: .2rem solid transparent;
         }
 
         i {
-          font-size: 3em;
+          font-size: 3rem;
 
           @media (max-width: $main-layout-breakpoint-xxm) {
-            font-size: 2.5em;
+            font-size: 2.1rem;
           }
         }
 
         p {
           text-transform: capitalize;
+
+          @media (max-width: $main-layout-breakpoint-xxm) {
+            font-size: 1.3rem;
+          }
         }
       }
     }
