--- a/styles/base/_vars.scss
+++ b/styles/base/_vars.scss
@@ -19,9 +19,8 @@
 
   // Sizes
   --navbar-width: 12rem;
-  --navbar-mobile-height: 8rem;
-  --header-mobile-height: 8rem;
-
+  --navbar-mobile-height: 5rem;
+  --header-mobile-height: 5rem;
 
   --topbar-padding: 0 4rem;
   --topbar-height-initial: 8rem;
